<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:customfontdemo="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="activity"
            type="com.nic.nammaoorusuper.OfflineActivities.LocationSaveOffline" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e7fbff"
        >
        <RelativeLayout
            android:id="@+id/header_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/button_background_square">
            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:id="@+id/back_img"
                android:src="@drawable/back"
                android:onClick="@{()-> activity.onBackPressed()}"
                android:padding="0dp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/entry_form"
                android:id="@+id/tittle"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                />


        </RelativeLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scroll_view"
            android:layout_above="@+id/textView1"
            android:layout_below="@id/header_layout">
            <LinearLayout
                android:id="@+id/linlay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">
                    <TextView
                        android:id="@+id/header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_left_20dp"
                        android:layout_marginTop="@dimen/padding"
                        android:layout_marginRight="@dimen/margin_left_20dp"
                        android:text="Name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp"
                        customfontdemo:fontName="@string/font_circular_bold" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/enter_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_left_20dp"
                        android:layout_marginTop="@dimen/padding"
                        android:layout_marginRight="@dimen/margin_left_20dp"
                        android:text="@string/location"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp"
                        customfontdemo:fontName="@string/font_circular_bold" />

                    <RelativeLayout
                        android:id="@+id/name_layout"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/header"
                        android:layout_below="@+id/enter_location"
                        android:layout_marginLeft="@dimen/margin_left_20dp"
                        android:layout_marginTop="@dimen/padding"
                        android:layout_marginRight="@dimen/margin_left_20dp"
                        android:background="@drawable/grey_bg"
                        android:orientation="vertical">


                        <EditText
                            android:layout_toLeftOf="@+id/location_audio_icon"
                            android:id="@+id/location_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="10dp"
                            android:singleLine="true"
                            android:textSize="@dimen/_12sdp"
                            android:inputType="text"
                            android:hint="@string/enter_location"
                            android:background="@color/full_transparent"
                            android:gravity="left" />

                        <ImageView
                            android:layout_marginRight="@dimen/_7sdp"
                            android:padding="@dimen/_2sdp"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:id="@+id/location_audio_icon"
                            android:src="@drawable/audio"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"/>
                        <ImageView
                            android:layout_marginRight="@dimen/_7sdp"
                            android:padding="@dimen/_2sdp"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:id="@+id/location_close_icon"
                            android:src="@drawable/close_icon"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"/>


                    </RelativeLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/enter_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_left_20dp"
                        android:layout_marginTop="@dimen/padding"
                        android:layout_marginRight="@dimen/margin_left_20dp"
                        android:text="@string/description"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp"
                        customfontdemo:fontName="@string/font_circular_bold" />

                    <RelativeLayout
                        android:id="@+id/description_layout"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/header"
                        android:layout_below="@+id/enter_description"
                        android:layout_marginLeft="@dimen/margin_left_20dp"
                        android:layout_marginTop="@dimen/padding"
                        android:layout_marginRight="@dimen/margin_left_20dp"
                        android:background="@drawable/grey_bg"
                        android:orientation="vertical">


                        <EditText
                            android:layout_toLeftOf="@+id/description_audio_icon"
                            android:id="@+id/description_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="10dp"
                            android:singleLine="true"
                            android:textSize="@dimen/_12sdp"
                            android:inputType="text"
                            android:hint="@string/enter_description"
                            android:background="@color/full_transparent"
                            android:gravity="left" />

                        <ImageView
                            android:layout_marginRight="@dimen/_7sdp"
                            android:padding="@dimen/_2sdp"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:id="@+id/description_audio_icon"
                            android:src="@drawable/audio"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"/>

                        <ImageView
                            android:layout_marginRight="@dimen/_7sdp"
                            android:padding="@dimen/_2sdp"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:id="@+id/description_close_icon"
                            android:src="@drawable/close_icon"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"/>



                    </RelativeLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:id="@+id/dynamic_widget_layout">
                    <com.nic.nammaoorusuper.support.MyCustomTextView
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/additional_tittle"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="bold"
                        android:textColor="@color/red"
                        android:text="@string/additional_details"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_below="@id/additional_tittle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/dynamic_widget_recycler"/>

                    <com.nic.nammaoorusuper.support.MyCustomTextView
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/no_data_icon"
                        android:layout_centerInParent="true"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold"
                        android:textColor="@color/red"
                        android:text="No Data Found"/>


                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/save"
                    android:layout_marginBottom="@dimen/_14sdp"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_20sdp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:paddingLeft="@dimen/_20sdp"
                        android:paddingRight="@dimen/_20sdp"
                        android:text="Save"
                        android:textStyle="bold"
                        android:textSize="@dimen/_14sdp"
                        android:textColor="@color/white"

                        />

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>
</layout>