<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.nic.nammaoorusuper.activity.LoginScreen" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context="com.monstertechno.loginuidesign2.MainActivity">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:layout_alignParentStart="true"
            android:background="@drawable/bottom_curved_color_bg"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_login"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/bg1"
                android:scaleType="fitEnd"
                />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/solidCircle"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_layout_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:padding="5dp">

                            <ImageView
                                android:id="@+id/image"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_centerInParent="true"
                                android:layout_centerHorizontal="true"
                                android:layout_gravity="start"

                                android:background="@drawable/ic_mail_outline_black_24dp"
                                tools:ignore="ContentDescription" />

                            <EditText
                                android:id="@+id/user_name"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:layout_centerHorizontal="true"

                                android:layout_toEndOf="@+id/image"
                                android:background="@android:color/transparent"
                                android:hint="@string/hint_username"
                                android:inputType="text"
                                android:singleLine="true"
                                android:padding="@dimen/_15sdp"
                                android:textColorHint="#606060"
                                android:textSize="15sp"
                                tools:ignore="Autofill" />
                        </RelativeLayout>
                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:background="#252b34" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_layout_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:padding="5dp">

                            <ImageView
                                android:id="@+id/lock"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_centerInParent="true"
                                android:layout_centerHorizontal="true"
                                android:layout_gravity="start"

                                android:background="@drawable/ic_lock_outline_black_24dp"
                                tools:ignore="ContentDescription" />

                            <EditText
                                android:id="@+id/password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:layout_centerHorizontal="true"


                                android:layout_toStartOf="@id/red_eye"
                                android:layout_toEndOf="@+id/lock"
                                android:background="@android:color/transparent"
                                android:padding="@dimen/_15sdp"

                                android:hint="@string/hint_password"
                                android:inputType="textPassword"
                                android:singleLine="true"
                                android:textColor="@android:color/black"
                                android:textColorHint="#606060"
                                android:textSize="15sp"
                                tools:ignore="Autofill,HardcodedText" />

                            <ImageView
                                android:id="@+id/red_eye"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_centerInParent="true"
                                android:layout_gravity="center"
                                android:layout_margin="@dimen/_5sdp"
                                android:background="@drawable/ic_baseline_visibility_24px"
                                android:onClick="@{()-> activity.showPassword()}"
                                tools:ignore="ContentDescription" />

                        </RelativeLayout>
                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:background="#252b34" />


                    <ImageButton
                        android:visibility="gone"
                        android:id="@+id/signin"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="end"
                        android:layout_marginTop="40dp"
                        android:layout_marginEnd="25dp"
                        android:onClick="@{()-> activity.checkLoginScreen()}"
                        android:background="@drawable/button_background"
                        android:src="@drawable/ic_arrow_forward_black_24dp"
                        tools:ignore="ContentDescription" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="25dp"
                        android:text="Version"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textSize="15sp"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_signin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:textAllCaps="false"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_marginRight="40dp"
                        android:onClick="@{()-> activity.checkLoginScreen()}"
                        android:background="@drawable/button_background"
                        android:text="SignIn"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>

